[gd_scene load_steps=10 format=3 uid="uid://b7xm4kp3qwn8r"]

[ext_resource type="Script" uid="uid://dwgsafq2gwd5m" path="res://scripts/environment/repair_station.gd" id="1_repair"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_panel"]
albedo_color = Color(0.2, 0.2, 0.25, 1)
metallic = 0.7
roughness = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_panel"]
material = SubResource("StandardMaterial3D_panel")
size = Vector3(1.5, 2, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_screen"]
albedo_color = Color(0.05, 0.05, 0.05, 1)
metallic = 0.1
roughness = 0.8
emission_enabled = true
emission = Color(0, 0.3, 0, 1)
emission_energy_multiplier = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_screen"]
material = SubResource("StandardMaterial3D_screen")
size = Vector3(1, 0.8, 0.02)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_button"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
metallic = 0.5
roughness = 0.4
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 0.2

[sub_resource type="CylinderMesh" id="CylinderMesh_button"]
material = SubResource("StandardMaterial3D_button")
height = 0.1
radial_segments = 16
rings = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_panel"]
size = Vector3(1.5, 2, 0.3)

[sub_resource type="SphereMesh" id="SphereMesh_indicator"]
radius = 0.03
height = 8.0
radial_segments = 16

[node name="PowerGridPanel" type="StaticBody3D"]
collision_layer = 2
script = ExtResource("1_repair")
station_name = "Power Grid Control Panel"

[node name="MainPanel" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_panel")

[node name="Screen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -0.06)
mesh = SubResource("BoxMesh_screen")

[node name="EmergencyButton" type="MeshInstance3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, -1.74846e-08, -0.4, 0, 0.4, -1.74846e-08, 0, -0.328637, -0.1)
mesh = SubResource("CylinderMesh_button")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_panel")

[node name="PowerIndicator" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -0.2)
light_color = Color(0, 1, 0, 1)
light_energy = 0.5
omni_range = 2.0

[node name="ControlPanel" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.08)

[node name="Indicator1" type="MeshInstance3D" parent="ControlPanel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.6, 0.0469011)
mesh = SubResource("SphereMesh_indicator")

[node name="Indicator2" type="MeshInstance3D" parent="ControlPanel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.6, 0.0469011)
mesh = SubResource("SphereMesh_indicator")

[node name="Indicator3" type="MeshInstance3D" parent="ControlPanel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0.0469011)
mesh = SubResource("SphereMesh_indicator")

[node name="Indicator4" type="MeshInstance3D" parent="ControlPanel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0.6, 0.0469011)
mesh = SubResource("SphereMesh_indicator")

[node name="Indicator5" type="MeshInstance3D" parent="ControlPanel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.6, 0.0469011)
mesh = SubResource("SphereMesh_indicator")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-1.00384, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, -0.06)
text = "POWER GRID CONTROL"
font_size = 24
outline_size = 8
