[gd_scene load_steps=8 format=3 uid="uid://cfhtkj3vp4rnn"]

[ext_resource type="Script" path="res://scripts/environment/repair_station.gd" id="1_repair"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_panel"]
albedo_color = Color(0.3, 0.3, 0.4, 1)
metallic = 0.7
roughness = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_panel"]
material = SubResource("StandardMaterial3D_panel")
size = Vector3(1.2, 1.5, 0.2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_screen"]
albedo_color = Color(0.1, 0.1, 0.1, 1)
metallic = 0.1
roughness = 0.8
emission_enabled = true
emission = Color(0, 0.5, 0, 1)
emission_energy_multiplier = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_screen"]
material = SubResource("StandardMaterial3D_screen")
size = Vector3(0.8, 0.6, 0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_repair"]
size = Vector3(1.2, 1.5, 0.3)

[sub_resource type="OmniLight3D" id="OmniLight3D_status"]
light_color = Color(0, 1, 0, 1)
light_energy = 0.5
omni_range = 3.0

[node name="RepairStation" type="StaticBody3D"]
collision_layer = 2
script = ExtResource("1_repair")

[node name="Panel" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_panel")

[node name="Screen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.11)
mesh = SubResource("BoxMesh_screen")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_repair")

[node name="StatusLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, -0.5)
light_color = Color(0, 1, 0, 1)
light_energy = 0.5
omni_range = 3.0